# hsr-login

./: LICENSE  MANIFEST.in  README-ja.md  README.md  hsr_login.py  pyproject.toml
.github/workflows/: publish.yml
scripts/: install-local.ps1  install-local.sh
tests/: test_hsr_login.py
