[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hsr-login"
version = "0.1.0"
description = "CLI command for claiming Honkai: Star Rail HoYoLAB daily check-in rewards."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kai Kuchiki" },
]
keywords = ["hoyolab", "honkai-star-rail", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
hsr-login = "hsr_login:main"

[tool.setuptools]
py-modules = ["hsr_login"]
