[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hsr-login"
dynamic = ["version"]
description = "CLI command for claiming Honkai: Star Rail HoYoLAB daily check-in rewards."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Kai Kuchiki" },
]
maintainers = [
  { name = "Kai Kuchiki" },
]
keywords = ["hoyolab", "honkai-star-rail", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Umichang/hsr-login"
Repository = "https://github.com/Umichang/hsr-login"
Issues = "https://github.com/Umichang/hsr-login/issues"

[project.scripts]
hsr-login = "hsr_login:main"

[tool.setuptools]
py-modules = ["hsr_login"]

[tool.setuptools.dynamic]
version = { attr = "hsr_login.__version__" }
